// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomResourceDetails /> with a CRD with a boolean field should display false in an additionalPrinterColumn as 'false' 1`] = `
<div>
  <div
    class="CrdResourceDetails MyCrd"
  >
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Created
      </span>
      <span
        class="value"
      >
        &lt;unknown&gt;
         ago 
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Name
      </span>
      <span
        class="value"
      >
        first-crd
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        MyField
      </span>
      <span
        class="value"
      >
        <ul>
          <li>
            false
          </li>
        </ul>
      </span>
    </div>
  </div>
</div>
`;

exports[`<CustomResourceDetails /> with a CRD with a boolean field should display true in an additionalPrinterColumn as 'true' 1`] = `
<div>
  <div
    class="CrdResourceDetails MyCrd"
  >
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Created
      </span>
      <span
        class="value"
      >
        &lt;unknown&gt;
         ago 
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Name
      </span>
      <span
        class="value"
      >
        first-crd
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        MyField
      </span>
      <span
        class="value"
      >
        <ul>
          <li>
            true
          </li>
        </ul>
      </span>
    </div>
  </div>
</div>
`;

exports[`<CustomResourceDetails /> with a CRD with a number field should display 0 in an additionalPrinterColumn as '0' 1`] = `
<div>
  <div
    class="CrdResourceDetails MyCrd"
  >
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Created
      </span>
      <span
        class="value"
      >
        &lt;unknown&gt;
         ago 
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Name
      </span>
      <span
        class="value"
      >
        first-crd
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        MyField
      </span>
      <span
        class="value"
      >
        <ul>
          <li>
            0
          </li>
        </ul>
      </span>
    </div>
  </div>
</div>
`;

exports[`<CustomResourceDetails /> with a CRD with a number field should display 1234 in an additionalPrinterColumn as '1234' 1`] = `
<div>
  <div
    class="CrdResourceDetails MyCrd"
  >
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Created
      </span>
      <span
        class="value"
      >
        &lt;unknown&gt;
         ago 
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        Name
      </span>
      <span
        class="value"
      >
        first-crd
      </span>
    </div>
    <div
      class="DrawerItem"
    >
      <span
        class="name"
      >
        MyField
      </span>
      <span
        class="value"
      >
        <ul>
          <li>
            1234
          </li>
        </ul>
      </span>
    </div>
  </div>
</div>
`;
